eudevfin/reports-ui/src/main/webapp/css/style.css
/************************* Page *************************/
img {
	vertical-align: middle;
}

.container-fluid {
	padding-right: 0px;
	padding-left: 0px;
}

.oda-legend {
    float: right;
}

/************************* Tables *************************/

.dataTables_wrapper {
	clear: none;
	min-height: 0px;
}

.dataTables_wrapper a {
	color: #3060ED;
	text-decoration: none;
	font-size: 14px;
}

.dataTables_wrapper a.filter-links {
	/*font-size: 12px;*/
}

.dataTables_wrapper select {
	width: 60px;
}

.dataTables_wrapper table td {
    padding: 5px;
    font-size: 12px;
}

.dataTables_wrapper table td {
    border-right: 1px solid #ccc;
}

.dataTables_wrapper table th {
    border-right: 1px solid #ccc;
}

.DataTables_sort_wrapper {
	font-size: 12px;
	color: #557822;
}

.dataTables_length {
	padding-top: 8px;
	padding-left: 5px;
}

.dataTables_info {
	padding-top: 5px;
	padding-bottom: 5px;
	padding-left: 5px;
}

.dataTables_paginate {
	width: 75%;
	padding-top: 5px;
	padding-bottom: 8px;
	padding-right: 5px;
}

.ui-buttonset .ui-button {
	margin-right: 0px;
	padding-right: 5px;
	padding-left: 5px;
}

.ui-widget-header {
	border: 0px;
}

.ui-widget-header .ui-state-disabled {
	opacity: .75;
}

.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
	border: 1px solid #cccccc;
	font-weight: bold;
	color: #1c94c4;
	height: 20px;
}

td.formattedNumeric {
	float: right !important;
}

.style-block-separator {
	margin-bottom: 15px;
}

/************************* Tables *************************/

.dataTables_wrapper {
    margin-bottom: 0em;
}

.dataTables_wrapper th {
    text-align: center;
}

.dataTables_wrapper td.numeric {
    text-align: right;
    font-family: monospace;
}

.dataTables_wrapper td.string {
    text-align: left;
}

.dataTables_wrapper {
    border: 1px solid #ccc;
}

.tableComponent {
	border: 1px solid #ccc;
}

.tableComponent td.percentFormat {
	text-align: right;
	font-family: monospace;
}

.removeHeader .dataTables_wrapper table thead {
	display: none;
}

tr.geography, td.geography {
    background-color: #DCDCDC;
}

tr.odd {
	background-color: #f5f5f5;
}

tr.odd td.sorting_1 {
	background-color: #f5f5f5;
}

tr.even td.sorting_1 {
	background-color: #fff;
}

td.column0 {
	border-right: 1px solid #ccc;
}

td.column1 {
	border-right: 1px solid #ccc;
}

div.box {
	background-color: #fff;
	border:0px;
	height: auto;
	overflow: hidden;
}

.box {
	
}

.box-header {
  	border: 1px solid #ddd;
	margin-bottom: -1px;
  	padding: 10px;
  	/*background-color: #fafafa;*/
  	background-image: -moz-linear-gradient(top, #fafafa, #efefef);
  	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#fafafa), to(#efefef));
  	background-image: -webkit-linear-gradient(top, #fafafa, #efefef);
  	background-image: -o-linear-gradient(top, #fafafa, #efefef);
  	background-image: linear-gradient(to bottom, #fafafa, #efefef);
  	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#fafafa', endColorstr='#efefef', GradientType=0);
  	-webkit-box-shadow: none;
     	-moz-box-shadow: none;
          box-shadow: none;
  	-webkit-border-radius: 2px 2px 0px 0px;
       -moz-border-radius: 2px 2px 0px 0px;
          	border-radius: 2px 2px 0px 0px;
	overflow: hidden;
}

.box-header h2 {
	font-size: 16px;
	line-height: 16px;
	float:left;
	margin-top: 2px;
	color: #646464;
	font-weight: normal;
	text-shadow: 0px 1px 0px #fff;
}

.box-header h2 i {
	margin: 1px 3px 0px 5px;
	opacity: .4;
}

.box-header .break {
	border-left: 1px solid #fcfcfc;
	border-right: 1px solid #ddd;
	margin: -12px 10px -10px 10px;
	padding: 12px 0px 10px 0px;
	
}

.box-header .box-icon {
	float:right;
	margin-top: 1px;
}

.box-header .box-icon i {
	-webkit-transition: all 0.1s ease-in-out;
	-moz-transition: all 0.1s ease-in-out;
	-o-transition: all 0.1s ease-in-out;
	-ms-transition: all 0.1s ease-in-out;
	transition: all 0.1s ease-in-out;
	opacity: .4;
}

.box-header .box-icon i:hover {
	opacity: .8;
}

.box-header .box-icon a {
	margin: 0px 5px;
}

.box-content {
  	margin-top: -1px;
	padding: 10px;
  	border: 1px solid #ddd;
  	/*background: #fcfcfc;*/
  	-webkit-border-radius: 0px 0px 2px 2px;
	   -moz-border-radius: 0px 0px 2px 2px;
          	border-radius: 0px 0px 2px 2px;
	-webkit-box-shadow: 0 1px 0px rgba(255, 255, 255, .6);
	   -moz-box-shadow: 0 1px 0px rgba(255, 255, 255, .6);
			box-shadow: 0 1px 0px rgba(255, 255, 255, .6);
}

.no-data {
	display: none;
}

